--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -10,11 +10,12 @@
                         <span class="time-sent">{{ message.sentAt }}</span>
                     </p>
                 </div>
+
             <div class="panel-footer">
                  <div class="input-group">
-                     <input type="text" class="form-control">
+                     <input type="text" ng-model="home.newMessage" class="form-control">
                      <span class="input-group-btn">
-                     <button class="btn btn-default" type="button">Send</button>
+                     <button class="btn btn-default" type="button" ng-click="home.send(home.newMessage)">Send</button>
                     </span>
                 </div>
             </div>
