--- a/app/templates/modaladdroom.html
+++ b/app/templates/modaladdroom.html
@@ -7,6 +7,6 @@
     </div>
     <div class="modal-footer">
         <button class="btn btn-primary" type="button" ng-click="$ctrl.ok()">OK</button>
-        <button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">Cancel</button>
+        <button class="btn btn-default" type="button" ng-click="$ctrl.cancel()">Cancel</button>
     </div>
 </div>
