--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,20 +2,33 @@ html,body,.container {
     height:100%;
 }
 
+.bloc-chat-title {
+    min-height: 63px;
+
+}
+
+h2.bloc-chat-title {
+    margin: 1em 1em 0em 1em;
+}
+
+
 .container {
     display:table;
     width: 100%;
     padding: 0 0 0 0; /*set left/right padding according to needs*/
     box-sizing: border-box;
+    max-height: 776px;
 }
 
 .message-container {
     padding-left: 0em;
+    padding-right: 0em;
     length: auto;
     border-width: 1px;
     border-style: solid;
     border-color: #cccccc;
     border-radius: 5px;
+    overflow-y: scroll;
 }
 
 .message-bubble
@@ -48,12 +61,22 @@ html,body,.container {
     color: black !important;
     font-size: 1.5em;
     padding: 1.5em 1em 1.5em 1em;
+    min-height: 93px;
+    border-bottom: 1px solid;
+    border-radius: 5px;
+    border-color: #cccccc;
 }
 
+.panel-message-body {
+    max-height: 620px;
+    overflow-y: scroll;
+}
 
 .sidebar {
     background-color: #cccccc;
     length: auto;
+    border-radius: 5px;
+    text-align: center;
 }
 
 .time-sent {
@@ -69,8 +92,17 @@ html,body,.container {
     width: 100%;
 }
 
+.text-muted {
+    margin: 0;
+}
+
 .room-list {
     padding: .5em;
+    font-size: 1.25em;
+}
+
+.room-item {
+    padding: .5em 0em .5em;
 }
 
 .room-item:hover {
