--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="HomeCtrl as home">
+<div ng-show="activeRoom" class="container" ng-controller="HomeCtrl as home">
     <div class="row">
         <div class="panel panel-default">
           <div class="panel-title"> {{ activeRoom.$value }} </div>
