--- a/app/templates/modal_add_user.html
+++ b/app/templates/modal_add_user.html
@@ -1,10 +1,11 @@
 <div>
     <div class="modal-header">
-        <h3 class="modal-title">Enter a username</h3>
+        <h3 class="modal-title">Enter your account information</h3>
     </div>
     <form name="form.userForm" novalidate>
         <div class="modal-body">
-            <input type="text" required class="form-control" ng-model="$ctrl.userName"  />
+            <input type="text" required class="form-control" ng-model="$ctrl.userEmail"  />
+            <input type="text" required class="form-control" ng-model="$ctrl.userPassword"
         </div>
         <div class="modal-footer">
             <button class="btn btn-primary" type="submit" ng-disabled="form.userForm.$invalid"
