adjusted max height and removed console logs

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -29,7 +29,7 @@
         </div>
         <form class="panel-footer message-box" name="form.messageForm" novalidate>
              <div class="input-group">
-                 <input type="text" ng-model="home.newMessage" class="form-control">
+                 <input type="text" ng-model="home.newMessage" class="form-control" required></input>
                  <span class="input-group-btn">
                  <button class="btn btn-default" type="button" ng-click="home.send(home.newMessage)" ng-disabled="form.messageForm.$invalid">Send</button>
                 </span>
